// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly | Editors Choice 1`] = `
<div>
  <div
    class="sc-AxjAm ciKidB"
  >
    <div
      class="sc-AxirZ kbkaQd"
      type="EditorsChoice"
    >
      <h2>
        Editor's Choice
      </h2>
    </div>
    <div
      class="sc-AxiKw llAaWr"
    >
      <p
        class="sc-AxhCb cwwnQe"
        type="EditorsChoice"
      >
        Lorem ipsum dolor sit Molestias?
      </p>
      <p
        class="sc-AxhCb cwwnQe"
        type="EditorsChoice"
      >
        Lorem ipsum dolor sit Molestias?
      </p>
      <p
        class="sc-AxhCb cwwnQe"
        type="EditorsChoice"
      >
        Lorem ipsum dolor sit Molestias?
      </p>
      <p
        class="sc-AxhCb cwwnQe"
        type="EditorsChoice"
      >
        Lorem ipsum dolor sit Molestias?
      </p>
    </div>
  </div>
</div>
`;

exports[`renders correctly | Featured 1`] = `
<div>
  <div
    class="sc-AxjAm ciKidB"
  >
    <div
      class="sc-AxirZ fxlTtO"
      type="Featured"
    >
      <h2>
        Featured Reading
      </h2>
    </div>
    <div
      class="sc-AxiKw llAaWr"
    >
      <p
        class="sc-AxhCb cwwnQe"
        type="Featured"
      >
        Lorem ipsum dolor sit Molestias?
      </p>
      <p
        class="sc-AxhCb cwwnQe"
        type="Featured"
      >
        Lorem ipsum dolor sit Molestias?
      </p>
      <p
        class="sc-AxhCb cwwnQe"
        type="Featured"
      >
        Lorem ipsum dolor sit Molestias?
      </p>
      <p
        class="sc-AxhCb cwwnQe"
        type="Featured"
      >
        Lorem ipsum dolor sit Molestias?
      </p>
    </div>
  </div>
</div>
`;
